<resources>
    <string name="app_name">H a b i l e c t</string>
    <string name="add_habit_title_hint">Enter title:</string>
    <string name="add_habit_reason_hint">Enter reason:</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="title_activity_view_habit_type">ViewHabitTypeActivity</string>
    <string name="action_delete">Delete</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="habit_type_details_tab">Details</string>
    <string name="habit_type_options_tab">Options</string>
    <string name="save">Save</string>
    <string name="habit_type">Habit Type</string>
    <string name="action_edit">Edit</string>
    <string name="title">Title:</string>
    <string name="reason">Reason:</string>
    <string name="start_date">Start Date:</string>
    <string name="weekly_plan">Weekly Plan:</string>
    <string name="completion_average">Completion Average:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_habit_type">Add Habit Type</string>
    <string name="add_habit_event">Add Habit Event</string>
    <string name="title_activity_maps">Map</string>

</resources>