<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.cmput301.t05.habilect.HabitTypeActivity$EditHabitFragment">

    <EditText
        android:id="@+id/editTextEditHabitTypeTitle"
        android:layout_width="204dp"
        android:layout_height="39dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="1dp"
        android:layout_marginEnd="11dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/add_habit_title_hint"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/editTextEditHabitTypeReason"
        app:layout_constraintEnd_toStartOf="@+id/buttonSaveHabitTypeEdits"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextEditHabitTypeReason"
        android:layout_width="204dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editTextEditHabitTypeTitle"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/add_habit_reason_hint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/buttonSaveHabitTypeEdits"
        app:layout_constraintHorizontal_bias="0.307"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEditHabitTypeTitle" />

    <DatePicker
        android:id="@+id/datePickerEditHabitTypeStartDate"
        android:layout_width="354dp"
        android:layout_height="145dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="11dp"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEditHabitTypeReason" />


        android:layout_width="299dp"
        android:layout_height="200dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="21dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/datePickerEditHabitTypeStartDate"
        app:layout_constraintVertical_bias="1.0">

    <CheckBox
        android:id="@+id/checkBoxEditMonday"
        android:layout_width="91dp"
        android:layout_height="43dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_weight="1"
        android:fontFamily="sans-serif-thin"
        android:text="@string/monday"
        android:textSize="@dimen/font_size_medium"
        app:layout_constraintEnd_toStartOf="@+id/checkBoxEditTuesday"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/checkBoxEditSunday"
        app:layout_constraintTop_toBottomOf="@+id/datePickerEditHabitTypeStartDate" />

    <CheckBox
        android:id="@+id/checkBoxEditWednesday"
        android:layout_width="108dp"
        android:layout_height="37dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_weight="1"
        android:fontFamily="sans-serif-thin"
        android:text="@string/wednesday"
        android:textSize="@dimen/font_size_medium"
        app:layout_constraintEnd_toStartOf="@+id/checkBoxEditThursday"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxEditSunday" />

    <CheckBox
        android:id="@+id/checkBoxEditTuesday"
        android:layout_width="96dp"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:layout_weight="1"
        android:fontFamily="sans-serif-thin"
        android:text="@string/tuesday"
        android:textSize="@dimen/font_size_medium"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/checkBoxEditMonday"
        app:layout_constraintTop_toBottomOf="@+id/datePickerEditHabitTypeStartDate" />

    <CheckBox
        android:id="@+id/checkBoxEditThursday"
        android:layout_width="96dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_weight="1"
        android:fontFamily="sans-serif-thin"
        android:text="@string/thursday"
        android:textSize="@dimen/font_size_medium"
        app:layout_constraintEnd_toStartOf="@+id/checkBoxEditFriday"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/checkBoxEditWednesday"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxEditMonday" />

    <CheckBox
        android:id="@+id/checkBoxEditFriday"
        android:layout_width="103dp"
        android:layout_height="39dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_weight="1"
        android:fontFamily="sans-serif-thin"
        android:text="@string/friday"
        android:textSize="@dimen/font_size_medium"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/checkBoxEditThursday"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxEditTuesday" />

    <CheckBox
        android:id="@+id/checkBoxEditSaturday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="156dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_weight="1"
        android:fontFamily="sans-serif-thin"
        android:text="@string/saturday"
        android:textSize="@dimen/font_size_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxEditWednesday"
        app:layout_constraintVertical_bias="0.0" />

    <CheckBox
        android:id="@+id/checkBoxEditSunday"
        android:layout_width="109dp"
        android:layout_height="43dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="8dp"
        android:layout_weight="1"
        android:fontFamily="sans-serif-thin"
        android:text="@string/sunday"
        android:textSize="@dimen/font_size_medium"
        app:layout_constraintEnd_toStartOf="@+id/checkBoxEditMonday"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/datePickerEditHabitTypeStartDate" />


    <Button
        android:id="@+id/buttonSaveHabitTypeEdits"
        android:layout_width="88dp"
        android:layout_height="83dp"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="68dp"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimary"
        android:fontFamily="sans-serif-thin"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_medium"
        app:layout_constraintBottom_toTopOf="@+id/datePickerEditHabitTypeStartDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextEditHabitTypeTitle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />
</android.support.constraint.ConstraintLayout>
